# federated_silo_agent

./: .env.example  .gitignore  AGENT_NOTES.md  README.md  plan.md  pyproject.toml
backend/: __init__.py
backend/agents/: __init__.py  a1_models.py  a1_monitoring.py  a2_investigator.py  a2_states.py  a3_silo_responder.py  a3_states.py  base.py  f1_coordinator.py  f1_states.py  f2_graph_analysis.py  f2_typologies.py  f3_sanctions.py  f4_sar_drafter.py  f5_compliance_auditor.py  llm_client.py  rules.py
backend/demo/: __init__.py  canonical_flow.py  seeds.py
backend/notebooks/: __init__.py  case_notebook.py  case_report.css  generate_case_notebook.py
backend/orchestrator/: __init__.py  agents.py  audit.py  audit_normalizer.py  runtime.py  state_machine.py
backend/policy/: __init__.py  aml.py  redaction.py
backend/runtime/: __init__.py  context.py  network.py
backend/security/: __init__.py  canonical_json.py  exceptions.py  principals.py  replay.py  signing.py
backend/silos/: __init__.py  dp.py  (+3 more)
data/: README.md  mock_sdn_list.json
docs/: data_setup.md  notebook_reports.md  p0_proxy_chain.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: demo_principals.yaml  docker-compose.yml  litellm_config.yaml  litellm_openrouter_config.yaml
scripts/: bootstrap_lobstertrap.ps1  p0_cases.py  smoke_lobstertrap.py  smoke_openrouter.py  smoke_proxy.py  start_frontend.ps1  start_litellm.ps1  start_lobstertrap.ps1
shared/: __init__.py  enums.py  identifiers.py  messages.py
tests/: test_a1.py  test_a2.py  test_a3.py  test_agent_base.py  test_aml_policy.py  test_budget.py  test_canonical_flow.py  test_case_notebooks.py  test_data_checksum.py  test_dp_composition.py  test_e2e_demo.py  test_f1.py  test_f2.py  test_f3.py  test_f4.py  test_f5.py  test_llm_client.py  test_messages.py  test_orchestrator.py  test_p0_cases.py  test_security_envelope.py  test_short_contracts.py  test_stats_primitives.py  test_ui_api.py
(+104 files in other folders)
