[project]
name = "federated-silo-agent"
version = "0.1.0"
description = "Federated privacy-preserving cross-bank AML investigation platform"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "litellm[proxy]>=1.75",
    "markdown-it-py>=4.2",
    "numpy>=2.4.4",
    "opendp>=0.14.2",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.11",
    "python-dotenv>=1.0",
    "requests>=2.34.0",
    "rich>=13.9",
    "scipy>=1.17.1",
    "sqlite-utils>=3.39",
    "tqdm>=4.67.3",
    "typer>=0.16",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
